--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 		<div class="main main-index" id="content">
 			<h1>Übersicht</h1>
 			<ul>
-				<li><a href="https://dojosch.github.io/nur-bilder/view1.html">View 1</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/section2.html">Section 2</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/section1.html">Section 1</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/plan2.html">Plan 2</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/plan1.html">Plan 1</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/elevation2.html">Elevation 2</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/elevation1.html">Elevation 1</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/catalog.html">Catalog</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view2.html">View 2</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view4.html">View 4</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view5.html">View 5</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view3.html">View 3</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view6.html">View 6</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view7.html">View 7</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view8.html">View 8</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view9.html">View 9</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/plan1-zoom-in.html">Plan 1 Zoom in</a></li>
-				<li><a href="https://dojosch.github.io/nur-bilder/view10.html">View 10</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view1.html">View 1</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/section2.html">Section 2</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/section1.html">Section 1</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/plan2.html">Plan 2</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/plan1.html">Plan 1</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/elevation2.html">Elevation 2</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/elevation1.html">Elevation 1</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/catalog.html">Catalog</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view2.html">View 2</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view4.html">View 4</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view5.html">View 5</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view3.html">View 3</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view6.html">View 6</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view7.html">View 7</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view8.html">View 8</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view9.html">View 9</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/plan1-zoom-in.html">Plan 1 Zoom in</a></li>
+				<li><a href="https://naneururer.github.io/bachelorentwerfen/view10.html">View 10</a></li>
 			</ul>
 		</div>
 	</body>
